--- a/assets/css/_intro.scss
+++ b/assets/css/_intro.scss
@@ -4,6 +4,10 @@
   padding: 50px 0 90px 0;
   align-self: center;
 
+  @media (min-width: $mobile) {
+    padding: 50px 0 50px 0;
+  }
+
   h1 {
     font-size: 24px;
     font-weight: 200;
