--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,9 @@ body {
     p {
       color: $grayish-blue;
       line-height: 1.8;
+      @media (min-width: $mobile) {
+        line-height: 1.5;
+      }
     }
   }
 }
